test/classes/nilability/nilability-bang-failure.1.good
nbq!
nilability-bang-failure.chpl:14: error: halt reached - argument to ! is nil
